--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "parcel-plugin-static-files-copy": "^2.3.1"
   },
   "dependencies": {
-    "d3": "^5.15.0"
+    "baseui": "^9.62.0",
+    "d3": "^5.15.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "styletron-engine-atomic": "^1.4.6",
+    "styletron-react": "^5.2.7"
   }
 }
