fix merge left issue

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "baseui": "^9.62.0",
     "d3": "^5.15.0",
     "jQuery": "^1.7.4",
+    "jquery": "^3.4.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "sortablejs": "^1.10.2",
